k8s/infrastructure/authelia/authelia-metrics-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: authelia-metrics
  namespace: authelia
spec:
  type: NodePort
  selector:
    app: authelia
  ports:
    - port: 9959
      targetPort: 9959
      nodePort: 30959
