k8s/infrastructure/authelia/redis-exporter-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis-exporter
  namespace: authelia
spec:
  type: NodePort
  selector:
    app: redis-exporter
  ports:
    - port: 9121
      targetPort: 9121
      nodePort: 30121
