k8s/infrastructure/authelia/redis-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: authelia
spec:
  selector:
    app: redis
  ports:
    - port: 6379
      targetPort: 6379
