k8s/infrastructure/authelia/authelia-ingress-route.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: authelia
  namespace: authelia
spec:
  entryPoints: [websecure]
  routes:
    - match: "Host(`auth.arishaig.site`)"
      kind: Rule
      services:
        - name: authelia
          port: 9091
  tls: {}
